k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-svc
spec:
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
