k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ing
  annotations:
    kubernetes.io/ingress.class: azure/appgateway
    appgw.ingress.kubernetes.io/override-frontend-port: "8080"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
           service:
             name: nodejs-app-svc
             port:
              number: 8080
